# jorg

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/: deps.py
backend/api/routes/: auth.py  (+7 more)
backend/core/: config.py  database.py  email.py  exceptions.py  logging.py  security.py  storage.py
backend/models/: __init__.py  base.py  candidate_profile.py  generated_document.py  invitation.py  opportunity.py  recruiter.py  refresh_token.py  template.py  user.py
backend/schemas/: auth.py  candidate.py  generation.py  invitation.py  opportunity.py  recruiter.py  rgpd.py  template.py  user.py
backend/scripts/: generate_sample_template.py
backend/services/: auth_service.py  base_crud.py  candidate_service.py  docx_engine.py  docx_parser.py  email_verification_service.py  generation_service.py  invitation_service.py  oauth_service.py  opportunity_service.py  password_reset_service.py  recruiter_service.py  rgpd_service.py  template_service.py
backend/static/: sample_template.docx
backend/tests/: conftest.py
backend/uploads/: 06482fd8-0d0e-48d2-8ad0-cc8d9dc499c6_t.docx  1ea40d12-7176-41a9-8bfc-97b12192a923_template.docx  1f7770df-34ce-425a-b6f1-39b1b5beb6e3_t.docx  21cea927-3965-4fd8-a25a-e43940a1c899_t.docx  25a7e2a6-fdcc-462c-9177-f103f4d5d115_t.docx  2ebbbf38-285e-4552-9b1c-e6e40730b864_t.docx  3c834f83-9d4c-47ea-a263-24112765dee1_t.docx  (+31 more)
(+112 files in other folders)
